--- a/src/templates/components/registration-panel/registration-panel.pug
+++ b/src/templates/components/registration-panel/registration-panel.pug
@@ -75,6 +75,7 @@ mixin registration-panel(options)
       = "Уже есть аккаунт на Toxin"
       a.registration-panel__authentification-link
         +main-button({
+          isSidePaddingLarge: true,
           style: "outlined",
           text: "войти"
         })
