--- a/src/templates/components/registration-panel/_registration-panel.scss
+++ b/src/templates/components/registration-panel/_registration-panel.scss
@@ -27,6 +27,8 @@
   }
   
   &__button {
+    min-height: 4.4rem;
+    display: flex;
     margin-bottom: 3rem;
   }
 
@@ -35,8 +37,8 @@
     
     &-link {
       flex-shrink: 0;
-      width: 100%;
-      max-width: 100px;
+      display: flex;
+      min-height: 4.4rem;
       outline: none;
       background: none;
       text-decoration: none;
