--- a/src/templates/components/dropdown/_dropdown.scss
+++ b/src/templates/components/dropdown/_dropdown.scss
@@ -10,7 +10,7 @@
     position: absolute;
     z-index: 1;
     width: 100%;
-    background: #fff;
+    background-color: #fff;
     overflow: hidden;
     transition: height 0.5s;
 
