--- a/src/templates/components/room-card/_room-card.scss
+++ b/src/templates/components/room-card/_room-card.scss
@@ -4,6 +4,7 @@
   min-height: 257px;
   box-shadow: 0 1rem 2rem $darkShade5;
   border-radius: 0.4rem;
+  background-color: #fff;
 
   &__slider {
     position: relative;
